[tool.poetry]
name = "Broadcast"
version = "1.0.0"
description = "Call of Duty feed watcher that reports the news via Discord."
authors = ["Ethan C <16727756+EthanC@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.18.2"
loguru = "^0.5.3"
notifiers = "^1.2.1"
markdownify = "^0.9.4"

[tool.poetry.dev-dependencies]
pylint = "^2.9.6"
black = "^21.7b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
