[tool.poetry]
name = "Broadcast"
version = "1.0.0"
description = "Call of Duty feed watcher that reports the news via Discord."
authors = ["Ethan C <16727756+EthanC@users.noreply.github.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
httpx = "^0.21.1"
loguru = "^0.5.3"
notifiers = "^1.2.1"
markdownify = "^0.10.0"

[tool.poetry.dev-dependencies]
pylint = "^2.12.2"
black = "^21.12b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
